Add a Description to Your package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "chafi",
+	"description": "Free Code Camp apis and microservices",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
